Update resource. CKStoreSample : Adds collection + table editing.

--- a/AppCoreKit 2.0.0/CKStoreSample/CKStoreSample/Resources/Localization.strings
+++ b/AppCoreKit 2.0.0/CKStoreSample/CKStoreSample/Resources/Localization.strings
@@ -35,8 +35,14 @@
 "numberOfChildren" = "Number of children";
 "numberOfChildren_Placeholder" = "Enter ...";
 "numberOfChildren_NavigationBar" = "Number of children";
+"userObject_Placeholder" = "Choose a user object";
 
 //Localize CKUserTitle
 "CKGenderMister" = "Mister";
 "CKGenderMiss"   = "Miss";
 "CKGenderMisses" = "Misses";
+
+"kUserObjects" = "User Objects";
+"kAdd" = "Add a user object";
+"kEmptyText" = "Enter your text ...";
+"kNoUserObjects" = "No objects available";
