Updates samples for IOS6

--- a/AppCoreKit 2.0.0/TwitterTimeline/TwitterTimeline/TwitterTimeline.strings
+++ b/AppCoreKit 2.0.0/TwitterTimeline/TwitterTimeline/TwitterTimeline.strings
@@ -8,3 +8,6 @@
 
 
 "kTimelineTitle" = "Timeline Public";
+"kFeedSourceForTweetsAlertTitle" = "Twitter Authentification Failed";
+"kFeedSourceForTweetsAlertMessage" = "Please register a Twitter account in your settings";
+"kOK" = "Ok";
