Refactor and document CKStoreSample.

--- a/Samples/CKStoreSample/CKStoreSample/Resources/Localization.strings
+++ b/Samples/CKStoreSample/CKStoreSample/Resources/Localization.strings
@@ -7,7 +7,7 @@
 "kSettingsViewControllerTitle" = "Settings Sample";
 "kIdentification" = "Identification";
 "kContact" = "Contact";
-"kFamilly" = "Familly";
+"kFamily" = "Family";
 "kValidateButton" = "Validate";
 "kOk" = "Ok";
 "kAlertView_ValidatedTitle" = "Validation";
