Refactor sample for adding UIControl sample requiring only stylesheet and no code without having to add class.

--- a/Samples/StylesheetSample/StylesheetSample/Resources/Localization.strings
+++ b/Samples/StylesheetSample/StylesheetSample/Resources/Localization.strings
@@ -4,7 +4,10 @@
 */
 
 
-
+"CKStylesheetSampleGroupedFormViewController" = "Form - Grouped";
+"CKStylesheetSamplePlainFormViewController" = "Form - Plain";
+"CKStylesheetSampleUIButtonViewController" = "UIButton";
+"CKStylesheetSampleUILabelViewController" = "UILabel";
 
 "CKTableViewCellStyleIPadForm" = "IPad Form Style";
 "CKTableViewCellStyleIPhoneForm" = "IPhone Form Style";
