UISwitch Customization sample.

--- a/Samples/StylesheetSample/StylesheetSample/Resources/Localization.strings
+++ b/Samples/StylesheetSample/StylesheetSample/Resources/Localization.strings
@@ -8,6 +8,7 @@
 "CKStylesheetSamplePlainFormViewController" = "Form - Plain";
 "CKStylesheetSampleUIButtonViewController" = "UIButton";
 "CKStylesheetSampleUILabelViewController" = "UILabel";
+"CKStylesheetSampleUISwitchViewController" = "UISwitch";
 
 "CKTableViewCellStyleIPadForm" = "IPad Form Style";
 "CKTableViewCellStyleIPhoneForm" = "IPhone Form Style";
